Bug 181705 - rating filter in status bar not changeable, if rating is not shown in album view
Summary: rating filter in status bar not changeable, if rating is not shown in album view
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Rating (other bugs)
Version First Reported In: 0.10.0
Platform: Gentoo Packages Unspecified
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-24 00:59 UTC by Ian Hubbertz
Modified: 2017-08-14 21:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Hubbertz 2009-01-24 00:59:36 UTC
Version:           0.10.0-rc1 (using KDE 4.1.96)
Installed from:    Gentoo Packages

The rating filter in the status bar is not changeable and does not show the current filter, if the rating is not shown below image thumbnails in album view.

BTW: The tooltip is fine - it stills shows the current filter.

To reproduce: settings -> digikam -> album view -> disable show digikam-rating.


BTW2: I stumbled on this problem, because of the new "change rating in thumbnail" feature. I used it by accident far to often, so I wanted to disable this.

So, this bug report includes also a wish: Please make this feature optional. :-)
Comment 1 Andi Clemens 2009-01-24 11:51:16 UTC
I'm afraid this is a feature, you can only use the quicksearch for elements shown in the iconview.
Comment 2 Marcel Wiesweg 2009-01-24 23:41:06 UTC
Andi, Gilles,

I am wondering if this restriction is necessary. There is no technical reason, we could just enable filtering. It can be irritating if filtering is done on a property that is not displayed. But on the other hand it can be irritating that a filter does not work. 
The rating and the text filter, the latter a bit more complex, are affected.
Viewpoints?

So depending on this decision, this bug is either WONTFIX or will be easily fixed.
Comment 3 Andi Clemens 2009-01-24 23:58:32 UTC
We had discussed this some months ago, I also don't quite understand why filtering is only working on displayed elements.
For me it would be more logical to just search on every possible field.
For example text quick search: If you do not display the image name, you are not able to filter anything (or maybe on the folder name, I have not tested it).

I do understand that if filtering works for rating but the stars are not displayed, you can not be sure if everything is filtered correctly. But still this is more user friendly then disabling it completely. You might never find out by yourself why the filter is "broken".
If I wouldn't know what can cause this problem, I would never think of that activating the displaying of the rating stars will also activate the quickfilter.
If we want to disable it, I think it would be even better to hide the widget completely.

But overall I would suggest to ignore these restrictions, at least for the rating widget.

My suggestion for now:
- filter ratings, even if the stars are not displayed
- text filter works on every possible field (file name, folder name, tags etc)

Andi
Comment 4 caulier.gilles 2009-01-25 00:05:46 UTC
Marcel,

I'm agree to remove these restrictions.

Gilles
Comment 5 Marcel Wiesweg 2009-01-26 22:49:08 UTC
SVN commit 917103 by mwiesweg:

No longer restrict filtering only to those fields visible in icon view

BUG: 181705

 M  +3 -1      albumiconviewfilter.cpp  
 M  +8 -19     albumlister.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=917103
Comment 6 caulier.gilles 2009-01-27 11:56:34 UTC
SVN commit 917246 by cgilles:

digiKam from KDE3 branche : backport commit #917103 from trunk
CCBUG: 181705


 M  +3 -1      albumiconviewfilter.cpp  
 M  +11 -21    albumlister.cpp  
 M  +11 -11    albumlister.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=917246