No longer restrict filtering only to those fields visible in icon view

BUG: 181705

svn path=/trunk/extragear/graphics/digikam/; revision=917103